--- a/ui/src/app/views/settings/user/consumer-details-modal/consumer-details-modal.scss
+++ b/ui/src/app/views/settings/user/consumer-details-modal/consumer-details-modal.scss
@@ -1,7 +1,17 @@
 @import '../../../../../common';
 
-.header {
-    .label:first-child {
-        margin-left: 5px;
-    }
+nz-row {
+  margin-top: 10px;
+}
+
+.floatRight {
+  float: right;
+}
+
+button.floatRight {
+  margin-right: 10px;
+}
+
+nz-form-label {
+  font-weight: bold;
 }
