refactor(ui): remove accordion from consumer create modal

--- a/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.scss
+++ b/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.scss
@@ -5,3 +5,15 @@
         border: none !important;
     }
 }
+
+nz-alert {
+  margin-bottom: 10px;
+}
+
+.alignLeft {
+  text-align: left;
+}
+
+.alignCenter {
+  text-align: center;
+}
