--- a/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
+++ b/ui/src/app/views/settings/user/consumer-create-modal/consumer-create-modal.html
@@ -1,143 +1,143 @@
 <div>
-    <div class="header">
-        {{ 'auth_consumer_create_modal_title' | translate }}
-    </div>
     <div class="content scrolling">
-        <div class="ui grid">
-            <div class="ui sixteen wide column">
-                <sui-accordion class="styled fluid" *ngIf="!newConsumer.id">
-                    <sui-accordion-panel [isOpen]="activeStep === formStepName.INFORMATIONS" [isDisabled]="true">
-                        <div title (click)="clickOpenStep(formStepName.INFORMATIONS)">
-                            <i class="dropdown icon"></i>
-                            {{'common_informations' | translate}}
-                        </div>
-                        <div content>
-                            <div class="ui form">
-                                <div class="ui wide field">
-                                    <div class="fields">
-                                        <div class="eight wide field">
-                                            <label>{{'common_name' | translate}}</label>
-                                            <input class="ui input" type="text" name="name"
-                                                [(ngModel)]="newConsumer.name">
-                                        </div>
-                                        <div class="eight wide field">
-                                            <label>{{'common_description' | translate}}</label>
-                                            <input class="ui input" type="text" name="group"
-                                                [(ngModel)]="newConsumer.description">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </sui-accordion-panel>
-                    <sui-accordion-panel [isOpen]="activeStep === formStepName.GROUPS" [isDisabled]="true">
-                        <div title (click)="clickOpenStep(formStepName.GROUPS)">
-                            <i class="dropdown icon"></i>
-                            {{'user_auth_groups' | translate}}
-                        </div>
-                        <div content>
-                            <div class="ui form" *ngIf="!newConsumer.id">
-                                <div class="ui message blue">
-                                    <p>{{'auth_consumer_create_modal_info_groups' | translate}}</p>
-                                </div>
-                                <div class="ui wide field">
-                                    <app-data-table [withFilter]="filterGroups" [withSelect]="selectGroupFunc"
-                                        (selectChange)="selectGroupChange($event)" [withPagination]="5"
-                                        [columns]="columnsGroups" [data]="groups" [loading]="loadingGroups">
-                                    </app-data-table>
-                                </div>
-                            </div>
-                        </div>
-                    </sui-accordion-panel>
-                    <sui-accordion-panel [isOpen]="activeStep === formStepName.SCOPES" [isDisabled]="true">
-                        <div title (click)="clickOpenStep(formStepName.SCOPES)">
-                            <i class="dropdown icon"></i>
-                            {{'user_auth_scopes' | translate}}
-                        </div>
+        <nz-row>
+            <nz-col [nzSpan]="24">
+                <nz-collapse nzAccordion *ngIf="!newConsumer.id">
+                    <nz-collapse-panel [(nzActive)]="panels[formStepName.INFORMATIONS]"
+                                       (click)="clickOpenStep(formStepName.INFORMATIONS)"
+                                       nzHeader="Informations">
+                        <form nz-form nzLayout="vertical">
+                            <nz-row>
+                                <nz-col [nzSpan]="10">
+                                    <nz-form-item>
+                                        <nz-form-label>Name</nz-form-label>
+                                        <nz-form-control>
+                                            <input nz-input type="text" name="name"
+                                                   [(ngModel)]="newConsumer.name">
+                                        </nz-form-control>
+                                    </nz-form-item>
+                                </nz-col>
+                                <nz-col [nzSpan]="10" [nzOffset]="4">
+                                    <nz-form-item>
+                                        <nz-form-label>Description</nz-form-label>
+                                        <nz-form-control>
+                                            <input nz-input type="text" name="group"
+                                                   [(ngModel)]="newConsumer.description">
+                                        </nz-form-control>
+                                    </nz-form-item>
+                                </nz-col>
+                            </nz-row>
+                        </form>
+                    </nz-collapse-panel>
+                    <nz-collapse-panel [(nzActive)]="panels[formStepName.GROUPS]"
+                                       (click)="clickOpenStep(formStepName.GROUPS)"
+                                       nzHeader="Groups">
+                        <form nz-form *ngIf="!newConsumer.id">
+                            <nz-alert nzType="info" nzMessage="Let groups selection empty to create consumer with wildcard access on groups."></nz-alert>
+                            <app-data-table [withFilter]="filterGroups" [withSelect]="selectGroupFunc"
+                                            (selectChange)="selectGroupChange($event)" [withPagination]="5"
+                                            [columns]="columnsGroups" [data]="groups" [loading]="loadingGroups">
+                            </app-data-table>
+                        </form>
+                    </nz-collapse-panel>
+                    <nz-collapse-panel [(nzActive)]="panels[formStepName.SCOPES]"
+                                       (click)="clickOpenStep(formStepName.SCOPES)"
+                                       nzHeader="Scopes">
                         <div content class="scope-list">
                             <table class="ui striped fixed table">
                                 <tbody>
-                                    <tr *ngFor="let scope of scopes">
-                                        <td class="wide">
-                                            <app-scope-detail [scope]="scope" (onChange)="onScopeDetailChange($event)">
-                                            </app-scope-detail>
-                                        </td>
-                                    </tr>
+                                <tr *ngFor="let scope of scopes">
+                                    <td class="wide">
+                                        <app-scope-detail [scope]="scope" (onChange)="onScopeDetailChange($event)">
+                                        </app-scope-detail>
+                                    </td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
-                    </sui-accordion-panel>
-                    <sui-accordion-panel [isOpen]="activeStep === formStepName.SERVICE" [isDisabled]="true">
-                        <div title (click)="clickOpenStep(formStepName.SERVICE)">
-                            <i class="dropdown icon"></i>
-                            Service
-                        </div>
-                        <div content>
-                            <div class="ui form">
-                                <div class="ui message">
-                                    <p>Optional fields for consumer used by services (eg. hatcheries).</p>
-                                </div>
-                                <div class="ui wide field">
-                                    <div class="fields">
-                                        <div class="six wide field">
-                                            <label>{{'common_name' | translate}}</label>
-                                            <input class="ui input" type="text" name="name"
-                                                [(ngModel)]="newConsumer.service_name">
-                                        </div>
-                                        <div class="six wide field">
-                                            <label>Type</label>
-                                            <input class="ui input" type="text" name="type"
-                                                [(ngModel)]="newConsumer.service_type">
-                                        </div>
-                                        <div class="six wide field">
-                                            <label>Region</label>
-                                            <input class="ui input" type="text" name="region"
-                                            [(ngModel)]="newConsumer.service_region">
-                                            <div class="ui checkbox">
-                                                <input type="checkbox" name="ignore_no_region"
-                                                    [(ngModel)]="newConsumer.service_ignore_job_with_no_region">
-                                                <label>Ignore job with no region</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </sui-accordion-panel>
-                </sui-accordion>
+                    </nz-collapse-panel>
+                    <nz-collapse-panel [(nzActive)]="panels[formStepName.SERVICE]"
+                                       (click)="clickOpenStep(formStepName.SERVICE)"
+                                       nzHeader="Service">
+                        <form nz-form nzLayout="vertical">
+                            <nz-alert nzType="info" nzMessage="Optional fields for consumer used by services (eg. hatcheries)."></nz-alert>
+                            <nz-row>
+                                <nz-col [nzSpan]="8">
+                                    <nz-form-item>
+                                        <nz-form-label>Name</nz-form-label>
+                                        <nz-form-control>
+                                            <input nz-input type="text" name="name"
+                                                   [(ngModel)]="newConsumer.service_name">
+                                        </nz-form-control>
+                                    </nz-form-item>
+                                </nz-col>
+
+                                <nz-col [nzSpan]="7" [nzOffset]="1">
+                                    <nz-form-item>
+                                        <nz-form-label>Type</nz-form-label>
+                                        <nz-form-control>
+                                            <input nz-input type="text" name="type"
+                                                   [(ngModel)]="newConsumer.service_type">
+                                        </nz-form-control>
+                                    </nz-form-item>
+                                </nz-col>
+
+                                <nz-col [nzSpan]="7" [nzOffset]="1">
+                                    <nz-form-item>
+                                        <nz-form-label>Region</nz-form-label>
+                                        <nz-form-control>
+                                            <input nz-input type="text" name="region"
+                                                   [(ngModel)]="newConsumer.service_region">
+                                            <label nz-checkbox name="ignore" [(ngModel)]="newConsumer.service_ignore_job_with_no_region">
+                                                Ignore job with no region
+                                            </label>
+                                        </nz-form-control>
+                                    </nz-form-item>
+                                </nz-col>
+                            </nz-row>
+                        </form>
+                    </nz-collapse-panel>
+
+                </nz-collapse>
+            </nz-col>
+        </nz-row>
+        <nz-row>
+            <nz-col [nzSpan]="24">
                 <app-consumer-display-signin-token *ngIf="newConsumer.id" [consumer]="newConsumer"
-                    [signinToken]="signinToken">
+                                                   [signinToken]="signinToken">
                 </app-consumer-display-signin-token>
-            </div>
-        </div>
+            </nz-col>
+        </nz-row>
     </div>
 </div>
 <div *nzModalFooter>
-    <div class="ui grid">
-        <div class="four wide column left aligned">
-            <button
+    <nz-row>
+        <nz-col [nzSpan]="8" class="alignLeft">
+            <button nz-button
                     *ngIf="activeStep === formStepName.GROUPS || activeStep === formStepName.SCOPES || activeStep === formStepName.SERVICE"
-                    class="ui primary button" (click)="clickBack()">
-                {{ 'btn_back' | translate }}
+                    (click)="clickBack()">
+                Back
             </button>
-        </div>
-        <div class="eight wide column centered">
-            <button *ngIf="activeStep !== formStepName.TOKEN" class="ui green button" [class.loading]="loading"
+        </nz-col>
+        <nz-col [nzSpan]="8" class="alignCenter">
+            <button *ngIf="activeStep !== formStepName.TOKEN" [nzLoading]="loading"
+                    nz-button nzType="primary"
                     (click)="clickNext()">
                 <ng-container *ngIf="activeStep === formStepName.SERVICE; then createButton; else nextButton">
                 </ng-container>
                 <ng-template #createButton>
-                    <i class="save icon"></i>{{ 'btn_create' | translate }}
+                    <i nz-icon nzType="save" nzTheme="outline"></i>
+                    Create
                 </ng-template>
                 <ng-template #nextButton>
-                    {{ 'btn_next' | translate }}
+                    Next
                 </ng-template>
             </button>
-        </div>
-        <div class="four wide column right aligned">
-            <button class="ui secondary button" (click)="closeCallback()">
-                {{ 'btn_close' | translate }}
+        </nz-col>
+        <nz-col [nzSpan]="8">
+            <button nz-button (click)="closeCallback()">
+                Close
             </button>
-        </div>
-    </div>
+        </nz-col>
+    </nz-row>
 </div>
