--- a/ui/src/app/shared/table/data-table.scss
+++ b/ui/src/app/shared/table/data-table.scss
@@ -48,3 +48,23 @@ pre {
     word-wrap: break-word;
     font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
+
+.green {
+  color: $cds_color_green;
+}
+.red {
+  color: $cds_color_red;
+}
+.blue {
+  color: $cds_color_teal;
+}
+.grey {
+  color: $cds_trigger_color;
+}
+
+td {
+  i {
+    font-size: 1.3em;
+    font-weight: 600;
+  }
+}
