refactor(ui): remove ng2-semantic-ui

--- a/ui/src/app/views/settings/user/edit/user.edit.html
+++ b/ui/src/app/views/settings/user/edit/user.edit.html
@@ -102,7 +102,7 @@
                                         </div>
                                     </ng-container>
                                     <ng-container *ngSwitchCase="'ldap'">
-                                        <div [suiTransition]="transitionController">
+                                        <div>
                                             <ng-container *ngIf="!showLDAPSigninForm">
                                                 <div class="center aligned header">
                                                     <i class="ui address book icon huge"></i>
